# mypkg

./: :w  package.xml  setup.cfg  setup.py  talker.py
.github/workflows/: test.yml
install/: local_setup.sh  setup.sh
install/mypkg/lib/mypkg/: talker
install/mypkg/share/mypkg/: package.sh  package.xml
launch/: talk_listen.launch.py
log/: latest_build
mypkg/: listener.py  talker.py
test/: test.bash
